# Mouse-Monitoring-with-linux-system-calls

./: .gitignore  CMakeLists.txt
include/: input_event_parser.hpp
src/: device.cpp  event_printer.cpp  event_reader.cpp  main.cpp
tools/: list_devices.sh
